--- a/options.html
+++ b/options.html
@@ -90,18 +90,9 @@
 </head>
 <body>
   <h1>exply Settings</h1>
-  <p class="subtitle">Configure your extension preferences</p>
+  <p class="subtitle">Configure your language preferences</p>
 
   <form id="options-form">
-    <div class="form-group">
-      <label for="api-key">Google Gemini API Key</label>
-      <input type="password" id="api-key" placeholder="AIza..." autocomplete="off">
-      <p class="help-text">
-        Your API key is stored locally and never transmitted except to Google's Gemini API.
-        <a href="https://makersuite.google.com/app/apikey" target="_blank">Get your API key here</a>
-      </p>
-    </div>
-
     <div class="form-group">
       <label for="language">Interface & Response Language</label>
       <select id="language" style="width: 100%; padding: 10px 12px; border: 1px solid #ddd; border-radius: 6px; font-size: 14px; box-sizing: border-box;">
